Update tests in line with latest Jigsaw updates